# pax-graphics

./: .clang-format  .gitmodules  CMakeLists.txt  ESP32.cmake  ESP_IDF.cmake  Kconfig  LICENSE  Makefile  Pi_Pico.mk  README.md  Standalone.cmake  Standalone.mk  checklist.md  cmake_install.cmake  component.mk  embed2c.py  esp_idf.cmake  generator.sh  library.properties  pack_headers.py  pax_fonts.c  pax_gfx.c  pax_shaders.c  pax_shapes.c  png2c.py  precalc.py  sources.cmake  standalone.cmake  standalone.mk  triangles.xcf
.github/workflows/: upload_component.yml
core/: CMakeLists.txt
core/include/: pax_config.h  pax_fixpt.hpp  pax_fonts.h  pax_gfx.h  pax_internal.h  pax_matrix.h  pax_orientation.h  pax_renderer.h  pax_shaders.h  pax_shapes.h  pax_text.h  pax_types.h
core/include/helpers/: pax_buf_type.inc  pax_dh_generic_line.inc  pax_dh_generic_quad.inc  pax_dh_generic_rect.inc  pax_dh_generic_tri.inc  pax_dh_generic_tzoid.inc  pax_drawing_helpers.h
core/include/renderer/: pax_renderer_soft.h  pax_renderer_softasync.h
core/include/shapes/: pax_arcs.h  pax_circles.h  pax_lines.h  pax_misc.h  pax_rects.h  pax_tris.h
core/src/: pax_fonts.c  pax_gfx.c  pax_matrix.c  pax_orientation.c  pax_renderer.c  pax_setters.c  pax_shaders.c  pax_shapes.c  pax_text.c
core/src/fonts/: Permanent Marker.pax_font  Saira Condensed.pax_font  Sky mono.pax_font  font_bitmap_sky.c  sky_mono.json  sky_var.json
core/src/helpers/: pax_dh_mcr_shaded.cpp  pax_dh_mcr_unshaded.cpp  pax_dh_shaded.cpp  pax_dh_unshaded.cpp  pax_mcr_dummy.c  pax_mcr_pthread.c  pax_precalculated.c
core/src/renderer/: pax_renderer_soft.c  pax_renderer_softasync.c
core/src/shapes/: pax_arcs.c  pax_circles.c  pax_lines.c  pax_misc.c  pax_rects.c  pax_tris.c
docs/: README.md  codecs.md  colors.md  drawing.md  matrices.md  misc.md  pixelformat.md  setup.md  shaders.md  supported-platforms.md
docs/c/: README.md  codecs.md  drawing.md  misc.md  orientation.md  setup.md  shaders.md
docs/core/: README.md  codecs.md  drawing.md  misc.md  setup.md
docs/core/images/: matrices.xcf
docs/cpp/: README.md  buffer.md  drawing.md  matrix.md  shaders.md  textbox.md
docs/images/: matrices.xcf
fonts/: font_bitmap_7x9.c  font_bitmap_permanentmarker.c  font_bitmap_permanentmarker22.c  font_bitmap_sairaregular.c  font_bitmap_sky.c  sky_mono.json
generators/: dh_gen.py  dh_rect.c  dh_test.c
gui/: CMakeLists.txt
gui/include/: pax_gui.h  pax_gui_internal.h  pax_gui_util.h
gui/priv_include/: pax_gui_internal.h
gui/src/: pax_gui.c  pax_gui_button.c  pax_gui_dropdown.c  pax_gui_grid.c  pax_gui_text.c  pax_gui_textbox.c  pax_gui_themes.c  pax_gui_util.c
gui/src/elem/: pax_gui_box.c  pax_gui_button.c  pax_gui_dropdown.c  pax_gui_grid.c  pax_gui_image.c  pax_gui_overlay.c  pax_gui_text.c  pax_gui_textbox.c
include/: pax_config.h  pax_fonts.h  pax_gfx.h  pax_gfx.hpp  pax_internal.h  pax_shaders.h  pax_shapes.h  pax_text.h  pax_types.h
src/: PAX_Graphics.h  matrix.c  pax_config.h  pax_fixpt.hpp  pax_fonts.c  pax_fonts.h  pax_gfx.c  pax_gfx.h  pax_gui.h  pax_internal.h  pax_matrix.c  pax_matrix.h  pax_orientation.c  pax_orientation.h  pax_sdl.h  pax_setters.c  pax_shaders.c  pax_shaders.h  pax_shapes.c  pax_shapes.h  pax_text.c  pax_text.h  pax_types.h
src/cpp/: pax_cxx.cpp  pax_cxx.hpp  pax_cxx_ref.hpp  pax_cxx_shape.cpp  pax_cxx_shape.hpp  pax_cxx_text.cpp  pax_cxx_text.hpp
src/drawing_helpers/: pax_dh_mcr_shaded.c  pax_dh_mcr_unshaded.c  pax_dh_shaded.c  pax_dh_unshaded.c
src/fonts/: Permanent Marker 22.pax_font  Saira Condensed.pax_font  Saira Regular.pax_font  Sky.pax_font  font_bitmap_7x9.c  font_bitmap_permanentmarker.c  font_bitmap_sairacondensed.c  font_bitmap_sairaregular.c  font_bitmap_sky.c
src/gui/: icons.cpp  icons.hpp  pax_gui.c  pax_gui.h  pax_gui.hpp  pax_gui_base.cpp  pax_gui_base.hpp  pax_gui_box.c  pax_gui_box.h  pax_gui_button.c  pax_gui_button.cpp  pax_gui_button.h  pax_gui_button.hpp  pax_gui_calc.c  pax_gui_colpicker.cpp  pax_gui_colpicker.hpp  pax_gui_container.cpp  pax_gui_container.hpp  pax_gui_draw.c  pax_gui_dropdown.c  pax_gui_dropdown.h  pax_gui_event.c  pax_gui_grid.c  pax_gui_grid.h  pax_gui_image.cpp  pax_gui_image.hpp  pax_gui_label.cpp  pax_gui_label.hpp  pax_gui_text.c  pax_gui_text.h  pax_gui_textbox.c  pax_gui_textbox.h  pax_gui_themes.c  pax_gui_types.h  pax_gui_util.c  pax_gui_util.h
src/gui/compound/: pax_gui_colpicker.cpp  pax_gui_colpicker.hpp  pax_gui_filepicker.cpp  pax_gui_filepicker.hpp  pax_gui_keyboard.cpp  pax_gui_keyboard.hpp
src/gui/elements/: pax_gui_button.cpp  pax_gui_button.hpp  pax_gui_container.cpp  pax_gui_container.hpp  pax_gui_dropdown.cpp  pax_gui_dropdown.hpp  pax_gui_image.cpp  pax_gui_image.hpp  pax_gui_label.cpp  pax_gui_label.hpp  pax_gui_progress.cpp  pax_gui_progress.hpp
src/gui/icons/: icons.c  icons.h  icons32.xcf
src/helpers/: pax_dh_generic_rect.h  pax_dh_generic_rect.hpp  pax_dh_generic_rect.inc  pax_dh_generic_tri.h  pax_dh_generic_tri.hpp  pax_dh_mcr_shaded.c  pax_dh_mcr_shaded.cpp  pax_dh_mcr_unshaded.c  pax_dh_mcr_unshaded.cpp  pax_dh_shaded.c  pax_dh_shaded.cpp  pax_dh_unshaded.c  pax_dh_unshaded.cpp  pax_mcr.c  pax_mcr_dummy.c  pax_mcr_esp32.c  pax_mcr_pthread.c  pax_precalculated.c  pax_precalculated.h  precalculated.c
test-images/: bezier.xcf  empty.c  empty.xcf  png2c.sh
